--- a/movies-frontend/src/App.css
+++ b/movies-frontend/src/App.css
@@ -14,8 +14,6 @@ body{
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: "black";
+  background-color: black; 
   color:white;
-  margin-top:10px;
-  
 }
