--- a/movies-frontend/src/components/hero/Hero.css
+++ b/movies-frontend/src/components/hero/Hero.css
@@ -1,13 +1,12 @@
 .movie-carousel-container{
-    width:  100vw;
-    background-color: black;
+    width: 100vw;
 }
 
 .movie-poster{
     height: 300px;
     border-radius: 10px;
     border: 1px solid grey;
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .movie-poster > img {
@@ -21,7 +20,7 @@
 }
 
 .movie-card{
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     width: 100%;
     height: 100%;
     background-size: cover;
